--- a/cards.html
+++ b/cards.html
@@ -5,6 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Insertion Sort D3 Animation</title>
     <link rel="stylesheet" type="text/css" href="cards.css" media="screen" />
+    
     <!--[if lt IE 9]>
         <link rel="stylesheet" type="text/css" href="cards-ie.css" media="screen" />
     <![endif]-->
@@ -37,6 +38,6 @@
         </label></li>
     </ul>
   </div>
-
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
 </body>
 </html>
