Add shuffle fade in/out animation

--- a/cards.html
+++ b/cards.html
@@ -18,7 +18,7 @@
     <![endif]-->
 </head>
 <body>
-  <div class="playingCards"> 
+  <div class="playingCards" style="display:none"> 
     <ul class="table">
       <li id="ace"><label for="c-AD" class="card rank-a spades">
           <span class="rank">A</span>
