--- a/cards.html
+++ b/cards.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -9,7 +8,8 @@
   <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
-    
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/quicksand/1.3/jquery.quicksand.min.js"></script>  
     <!--[if lt IE 9]>
         <link rel="stylesheet" type="text/css" href="cards-ie.css" media="screen" />
     <![endif]-->
@@ -18,29 +18,39 @@
     <![endif]-->
 </head>
 <body>
-  <div class="playingCards" style="display:none"> 
-    <ul class="table">
-      <li id="ace"><label for="c-AD" class="card rank-a spades">
-          <span class="rank">A</span>
-          <span class="suit">&nbsp;</span>
-        </label></li>
-      <li id="two"><label for="c-2D" class="card rank-2 spades">
-          <span class="rank">2</span>
-          <span class="suit">&nbsp;</span>
-        </label></li>
-      <li id="three"><label for="c-3D" class="card rank-3 spades">
-          <span class="rank">3</span>
-          <span class="suit">&nbsp;</span>
-        </label></li>
-      <li id="four"><label for="c-4D" class="card rank-4 spades">
-          <span class="rank">4</span>
-          <span class="suit">&nbsp;</span>
-        </label></li>
-      <li id="five"><label for="c-5D" class="card rank-5 spades">
-          <span class="rank">5</span>
-          <span class="suit">&nbsp;</span>
-        </label></li>
-    </ul>
+  <div id="cards" style="display:none">
+
+    <div class="playingCards"> 
+      <div class="card rank-a spades">
+        <span class="rank">A</span>
+        <span class="suit">&nbsp;</span>
+      </div>
+    </div>
+    <div class="playingCards"> 
+      <div class="card rank-2 spades">
+        <span class="rank">2</span>
+        <span class="suit">&nbsp;</span>
+      </div>
+    </div>
+    <div class="playingCards"> 
+      <div class="card rank-3 spades">
+        <span class="rank">3</span>
+        <span class="suit">&nbsp;</span>
+      </div>
+    </div>
+    <div class="playingCards"> 
+      <div class="card rank-4 spades">
+        <span class="rank">4</span>
+        <span class="suit">&nbsp;</span>
+      </div>
+    </div>
+    <div class="playingCards"> 
+      <div class="card rank-5 spades">
+        <span class="rank">5</span>
+        <span class="suit">&nbsp;</span>
+      </div>
+    </div>
+
   </div>
   <script src="insertionsort.js" charset="utf-8"></script>
 </body>
