Add swapWithPrevCard, swapWithNextCard
- Add event handler and functions that swap the clicked card with the previous or next card.

--- a/cards.html
+++ b/cards.html
@@ -20,31 +20,31 @@
 <body>
   <div id="cards" style="display:none">
 
-    <div class="playingCards"> 
+    <div id="ace" class="playingCards"> 
       <div class="card rank-a spades">
         <span class="rank">A</span>
         <span class="suit">&nbsp;</span>
       </div>
     </div>
-    <div class="playingCards"> 
+    <div id="two" class="playingCards"> 
       <div class="card rank-2 spades">
         <span class="rank">2</span>
         <span class="suit">&nbsp;</span>
       </div>
     </div>
-    <div class="playingCards"> 
+    <div id="three" class="playingCards"> 
       <div class="card rank-3 spades">
         <span class="rank">3</span>
         <span class="suit">&nbsp;</span>
       </div>
     </div>
-    <div class="playingCards"> 
+    <div id="four" class="playingCards"> 
       <div class="card rank-4 spades">
         <span class="rank">4</span>
         <span class="suit">&nbsp;</span>
-      </div>
+        </div>
     </div>
-    <div class="playingCards"> 
+    <div id="five" class="playingCards"> 
       <div class="card rank-5 spades">
         <span class="rank">5</span>
         <span class="suit">&nbsp;</span>
